--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
+DATABASE = "mongodb+srv://magnum:%23Incorrect%40%242532@cluster0.rlaf7.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 #DATABASE = "mongodb://localhost:27017"
-#RESEND_API = "your resend_api"
-#OPENAI_API_KEY = "your open_ai api key"
+RESEND_API = "your resend_api"
+OPENAI_API_KEY = "your open_ai api key"
 JWT_SECRET= "your_private_jwt_secret_key"
 NODE_ENV = "production"
 OPENSSL_CONF='/dev/null'
